# chipereganyu-app

./: .env  README.md
.github/workflows/: code-quality-check.yml
backend/: .env  Cargo.toml  Database.md  Dockerfile  ReadMe.md  docker-compose.yml
backend/entity/: Cargo.toml
backend/entity/src/: groups.rs  mod.rs  prelude.rs  users.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20231101_120130_users_table.rs  m20231101_120135_groups_table.rs
backend/src/: main.rs
backend/src/config/: database.rs  mod.rs  server.rs
backend/src/models/: database.rs  groups.rs  mod.rs  user.rs
backend/src/resources/: mod.rs  routes.rs
backend/src/resources/groups/: group_routes.rs  mod.rs
backend/src/resources/health/: health_routes.rs  health_service.rs  mod.rs
backend/src/resources/members/: member_routes.rs  members.rs  members_service.rs  mod.rs
backend/src/resources/persistent/: repository.rs
backend/src/utils/: errors.rs  mod.rs
frontend/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: routes.ts
frontend/src/lib/components/: NavBar.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/developers/: +page.svelte
frontend/src/routes/register/: +page.svelte
migration/: .gitignore  Cargo.toml
migration/src/: lib.rs  m20231029_200844_groups_table.rs
