[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
uuid = { version = "1.5.0", features = ["v4"] }

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
]
